feat: release v0.1.8 with Nautilus file manager integration and memory optimization settings; update changelog and metadata

--- a/src/app/features/components/dashboard/general-overview/general-overview.component.scss
+++ b/src/app/features/components/dashboard/general-overview/general-overview.component.scss
@@ -274,7 +274,7 @@
           background: rgba(var(--primary-color-rgb), 0.15);
           flex-shrink: 0;
 
-          @each $type, $color in ("sync", primary), ("copy", yellow), ("move", orange),
+          @each $type, $color in ("sync", primary-color), ("copy", yellow), ("move", orange),
             ("bisync", purple)
           {
             &.#{$type}-color {
