--- a/src/app/layout/titlebar/titlebar.component.html
+++ b/src/app/layout/titlebar/titlebar.component.html
@@ -144,7 +144,7 @@
     <mat-divider></mat-divider>
     <button cdkMenuItem class="menu-item" (click)="onBrowseClick()">
       <span>File Browser</span>
-      <span class="shortcut" aria-hidden="true">Ctrl + F</span>
+      <span class="shortcut" aria-hidden="true">Ctrl + B</span>
     </button>
     <mat-divider></mat-divider>
 
